src/regression/parse_pool/libtest5.sfp.out


sfc in library libtest5.sfl
syntax error at line 2, position 83:
use application test_blink $(FENNEC_FOX_LIB)/Application/SimpleBlink (uint8_t foo=, uint16_t bar)
                                                                                  ^
